...
      <ScrollView contentContainerStyle={styles.content}>
        <Text accessibilityLabel="welcome-emoji" style={styles.emoji}>
          👋
        </Text>

        <Text accessibilityLabel="welcome-title" style={styles.title}>
          Welcome, Rooheen
        </Text>

        <Text accessibilityLabel="welcome-subtitle" style={styles.subtitle}>
          Start your React Native Learning Journey
        </Text>

...
        >
          Learn React Native step by step with simple examples, hands-on
          practice, and mini projects.
        </Text>

        <Pressable
          testID="open-camera-button"
          accessibilityLabel="open-camera-button"
          style={styles.cameraButton}
          onPress={() => router.push("/camera")}
        >
          <Text
            testID="open-camera-button-text"
...
