appId: host.exp.exponent
---
# - launchApp

- assertVisible:
    text: "Welcome, Rooheen"

- tapOn:
    id: "open-camera-button"

- assertVisible:
    id: "flip-camera-button"

- tapOn:
    id: "flip-camera-button"

- tapOn:
    id: "back-button"
